<resources>
    <string name="app_name">Transformer War</string>
    <string name="battle">battle</string>
    <string name="transformers">Transformers</string>
    <string name="cancel_label">Cancel</string>
    <string name="create_label">Create</string>

    <string name="strength">strength</string>
    <string name="intelligence">intelligence</string>
    <string name="speed">speed</string>
    <string name="endurance">endurance</string>
    <string name="rank">rank</string>
    <string name="courage">courage</string>
    <string name="firepower">firepower</string>
    <string name="skill">skill</string>
    <string name="transformer_name_label_hint">Transformer name</string>
    <string name="create_autobot_title">Create new Autobot</string>
    <string name="create_decepticon_title">Create new Decepticon</string>
    <string name="loading_create_transformer">creation of %s is in progress</string>
    <string name="errorCreateTransformer">we cannot create your transformer</string>
    <string name="emptyTransformerList">No transformer Available for battle</string>
    <string name="autobots_label">Autobots</string>
    <string name="decepticon_label">Decepticon</string>
    <string name="decepticonMessageWinner">"The winner is the Decepticon "</string>
    <string name="winnerMessage">The winner is the %s</string>
    <string name="cybertronDestroyed">Cybertron is Destroyed</string>
    <string name="rating_rank">rating rank : %s</string>
    <string name="deleteTransformerMessage">deleting&#8230;</string>
    <string name="impossibleToDeleteTransformer">Opss! We cannot delete the transformer</string>
    <string name="SuccessDeleteTransformer">The transformer was deleted succefully</string>
    <string name="loading_list_transformer">loading transformers&#8230;</string>
    <string name="modifyTransformerTitle">modify %s</string>
    <string name="loading_modify_transformer">modification of %s in progress</string>
    <string name="modifyLabel">Modify</string>
    <string name="change_team_bt_label">become %s</string>
    <string name="errorModificationTransformer">Ops!we cannot modify this transformer</string>
    <string name="SuccessAddedTransformer">New transformer was added succefully</string>
    <string name="SuccessModifiedTransformer">%s was modified successfully</string>


    <string-array name="feature_name_transformer">
        <item>@string/strength</item>
        <item>@string/intelligence</item>
        <item>@string/speed</item>
        <item>@string/endurance</item>
        <item>@string/rank</item>
        <item>@string/courage</item>
        <item>@string/firepower</item>
        <item>@string/skill</item>
    </string-array>

</resources>